Allen-Zhang/src/components/1-NavComponents/Navbar.css
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;

  position: fixed; 
  width: 100%; 
  top: 0; 
  z-index: 5; 
  background-color: rgba(0, 0, 0, 0.75);
}

.header h2 {
  font-size: 1.5rem;
  font-weight: 500;
  transition: color 0.3s;
}

.nav {
  display: flex;
}

.nav li {
  padding: 0 1rem;
}

.nav li a {
  font-size: 1.2rem;
  font-weight: 500;
  transition: color 0.3s;
}

.nav li a:hover,
.header h2:hover {
  color: blue;
}

.hamburger-menu {
  display: none;
}

@media screen and (max-width: 1024px) {
  .nav {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100%;

    position: absolute;
    top: -100%;
    left: 0;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.9);

    transition: all 0.2s ease;
  }

  .nav.active {
    display: none;
    top: 0;
  }

  .nav li {
    padding: 1rem 0;
    margin: 0.5rem;
  }

  .nav li a {
    font-size: 2rem;
  }

  .header h2 {
    position: relative;
    z-index: 2;
  }

  .hamburger-menu {
    display: block;
    position: relative;
    z-index: 2;
  }
}

